--- a/jail.d/apache-multiport.conf
+++ b/jail.d/apache-multiport.conf
@@ -5,4 +5,4 @@ port      = http,https
 filter    = apache-auth
 logpath   = /var/log/apache*/*error.log
 maxretry  = 10
-action    = ufw-multiport[port="http,https", protocol=tcp]
+action    = ufw-multiport[port="80,443", protocol=tcp]
